# mockingbird

./: .env  .gitignore  README.md  Refining Ecological Metric Accuracy.md  main.py  pyproject.toml  test_forest.py
.antigravitycli/: 82d2b164-a094-4063-9a4a-425039b7e2d7.json
MLP_PIPELINE/: __init__.py  config.py  model.py  scoring_service.py
MLP_PIPELINE/encoders/: __init__.py  base.py  panns_cnn14.py
MLP_PIPELINE/training/: build_dataset.py  train_fusion_v2.py  train_mlp.py
app/: __init__.py
app/data/: country_distribution.csv  habitat_classification.csv  habitat_traits.json  iucn_cache.json  native_data.json  native_species.json  rarity_scores.json  species_redlist.csv
app/routes/: __init__.py  forest_health.py  forest_score.py  list_species.py  report.py
app/scripts/: Nepal-Species.csv  bird_rarity.py  build_forest_json.py  build_iucn_data.py  build_native_data.py  build_rarity_data.py  csv_sample_30rows.tsv  download_dataset.py  forest_dependency.py  forest_health_input.json  native.py  prepare_reference_data.py  rarity.py
app/utils/: __init__.py  dataset_query.py  detect_species.py  processing.py  rag.py  test.py
backend/: Dockerfile  enrichment.py  health_index.py  main.py  pipeline.py
backend/tests/: test_feature_builder.py  test_health_index.py
dataset/rag/: .gitignore  README.md  add_common_names.py  app.py  build_final_database.py  enrich_with_excel.py  prepare_csv_subset.py  pyproject.toml  query.py  test_rag.py
dataset/rag/core/: __init__.py  data.py  embedding.py  search.py  vector_store.py
dataset/rag/faiss_store/: faiss.index  metadata.pkl
db/: helpers.py  schema.sql  seed.py
db/migrations/: 01_users.sql  02_nepal_species_reference.sql  03_recordings.sql  04_species_detections.sql  05_soundscape_indices.sql  06_health_score_components.sql  07_species_enrichment.sql  (+1 more)
feature_builder/: __init__.py  builder.py  rag_client.py  schema.py
frontend/: package-lock.json  package.json
script/: download.py
test_audio/: gen_test_wav.py  test_upload.py
tests/: conftest.py  test_build_forest_json.py
