[project]
name = "eco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "birdnet>=0.2.5",
    "fastapi[standard]>=0.136.1",
    "asyncpg>=0.29.0",
    "scikit-maad>=1.4.2",
    "noisereduce>=3.0.2",
    "librosa>=0.10.1",
    "scikit-learn>=1.4.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.1",
    "httpx>=0.27.0",
    "pandas>=2.0.0",
]
