[project]
name = "eco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "birdnet>=0.2.5",
    "fastapi[standard]>=0.136.1",
    "gdown>=6.0.0",
    "geopy>=2.4.1",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
