[project]
name = "eco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "birdnet>=0.2.5",
    "chromadb>=1.5.9",
    "fastapi[standard]>=0.136.1",
    "gdown>=6.0.0",
    "ollama>=0.6.2",
    "wikipedia>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
