[project]
name = "mockingbird-rag"
version = "0.1.0"
description = "Isolated RAG system for MokingBird — bird species knowledge base"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "faiss-cpu>=1.9.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "pypdf>=5.0.0",
    "sentence-transformers>=3.0.0",
    "tiktoken>=0.8.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.5",
    "ollama>=0.6.2",
]
